# card-games-framework

./: AUTHORS.md  CMakeLists.txt  LICENSE  Makefile  README.md  main  main.cpp
src/: Bataille.cpp  Bataille.hpp  Belote.cpp  Belote.hpp  Card.cpp  Card.hpp  ColoredCard.cpp  ColoredCard.hpp  Controller.cpp  Controller.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  HuitAmericain.cpp  HuitAmericain.hpp  Player.cpp  Player.hpp  Tarot.cpp  Tarot.hpp  UNO.cpp  UNO.hpp  View.cpp  View.hpp
src/Model/: Bataille.cpp  Bataille.hpp  Belote.cpp  Belote.hpp  Card.cpp  Card.hpp  ColoredCard.cpp  ColoredCard.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  HuitAmericain.cpp  HuitAmericain.hpp  Player.cpp  Player.hpp  UNO.cpp  UNO.hpp
src/Model/Jeu/: Bataille.cpp  Bataille.hpp  Belote.cpp  Belote.hpp  HuitAmericain.cpp  HuitAmericain.hpp  Tarot.cpp  Tarot.hpp  UNO.cpp  UNO.hpp
src/View/: TerminalView.cpp  TerminalView.hpp
uml_class_diagram/: 128130.diagram  2.session  classdiagrams.html  index-withframe.html  index.html  index_67.html  navig.html  uml_class_diagram.prj
